--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-it's only me..:(
+# DO NOT EDIT.
+# This file lists all contributors to the repository.
 
-Name: Murad sirajudeen
+Name: morad sirajudeen
 Email: kysbrays@gmail.com
